<resources>
    <string name="app_name">VIP影视</string>

    <string name="button_cancel">取消</string>
    <string name="button_ok">确定</string>

    <!--列表数据提示-->
    <string name="list_load_more_data" formatted="true">正在加载中&#8230;</string>
    <string name="list_no_more_data" formatted="true">已加载全部</string>
    <string name="list_empty" formatted="true">哎呀~没有找到你要的东西呢</string>

    <!--请求异常信息-->
    <string name="net_error_for_link_exception">网络连接失败，请检查网络</string>
    <string name="net_error_for_access_unauthorized">账号授权失败或被禁用，请重新登录!</string>
    <string name="net_error_for_access_denied">网络连接失败</string>
    <string name="net_error_for_not_find">找不到请求资源地址</string>
    <string name="net_error_for_time_out">网络连接超时,请稍后再试</string>
    <string name="net_error_for_service_error">人太多啦，请稍后重试</string>
    <string name="net_error_for_json">数据开小差了，请稍后重试</string>
    <string name="net_error_for_ssl">证书验证失败</string>

    <!--加载框-->
    <string name="loading_msg">正在获取信息，请稍后&#8230;</string>

    <!--权限提示-->
    <string name="permission_sd">为了可以正常使用,请允许App所需的必要权限</string>

    <string name="exit_again">再按一次退出</string>


    <!--    首页fragment-->
    <string name="home_tv">首页</string>
    <string name="source_tv">片库</string>
<!--    <string name="welf_tv">福利</string>-->
    <string name="welf_tv">游戏</string>
<!--    <string name="me_tv">我的</string>-->
    <string name="me_tv">充值</string>
    <string name="me_tv_1">我的</string>
    <string name="home_gg">【VIP影视公告】保存最新官网地址www.xinxi</string>
    <string name="home_vip_tv">VIP视频专区</string>

    <!--    福利-->
    <string name="welfare_vip_tv1">福利专区</string>
    <string name="welfare_vip_tv2">(点击即送VIP特权)</string>

    <!--    视频详情-->
    <string name="video_detail_buffinfo_tip">视频加载中...</string>
    <string name="video_detail_buffinfo_tip2">如果长时间加载不出，请尝试重启app以获取速度</string>
    <string name="video_tv_dialog_title" formatted="true">选集</string>
    <string name="video_tv_count" formatted="true">共%s集</string>
    <string name="video_detail_play_resour_empty">暂无播放资源，去看看别的吧</string>
<!--    <string name="download_manage_stop">已暂停，点击继续下载</string>-->
    <string name="download_manage_stop">已暂停</string>
    <string name="video_detail_play_error">加载视频失败，请稍后重试</string>
    <string name="video_detail_buffinfo_load">加载:</string>
    <string name="video_detail_play_old_position">已为您跳转到上次播放的位置</string>
    <string name="video_detail_play_no_next">没有下一集啦</string>

    <string name="message_dialog_title">温馨提示</string>
    <string name="video_detail_Pc_download">下载地址已拷贝，当前移动版本不支持导出，请到xigua.com 下载pc端西瓜进行电影下载导出，禁止非法传播</string>

<!--    个人中心-->
    <string name="me_logout">退出登录</string>

<!--    视频下载-->
    <string name="video_download">视频下载</string>
    <string name="video_clear_all">清空</string>
    <string name="str_avail">剩余可用空间：</string>
    <string name="str_avail_gb">--.-- GB</string>
    <string name="download_manage_tab_1">未完成</string>
    <string name="download_manage_tab_2">已完成</string>
    <string name="download_manage_tab_3">播放记录</string>
    <string name="download_manage_title">我的下载</string>
    <string name="download_over">下载完成</string>
    <string name="download_get_info">正在获取文件信息</string>
    <string name="download_manage_offline_empty">没有下载的视频</string>
    <string name="download_manage_done_empty">没有下载完的视频，快去下载吧</string>
    <string name="download_manage_play_record_empty">没有播放记录</string>
    <string name="download_edit">编辑</string>
    <string name="download_edit_select_all">全选</string>
    <string name="download_edit_stop_all">暂停全部</string>
    <string name="download_edit_select_all_cancle">全部取消</string>
    <string name="download_edit_delete">删除</string>
    <string name="download_edit_delete_empty">请选择要删除的选项</string>
    <string name="download_edit_delete_empty_1">当前无可删除内容</string>
    <string name="message_dialog_delete_video" formatted="true">确定删除 %s 吗?</string>
    <string name="message_dialog_delete_all_video" formatted="true">确定清空全部视频吗?</string>
    <string name="waring">警告</string>
    <string name="sd_no_more">你的手机存储空间不足500MB,会影响影片的观看，请先清除内存空间,退出后重新进入</string>
    <string name="do_error">操作失败，发生异常，请退出重新进入</string>

    <!--App更新-->
    <string name="download_success">下载完成，点击安装</string>
    <string name="download_progress">正在下载:%1$d%%</string>
    <string name="apk_download_url">url</string>
    <string name="up_app_new">有新的版本   New</string>
    <string name="up_app_title">发现新版本</string>
    <string name="up_app_ok">立即更新</string>
    <string name="up_app_version">版本: </string>
    <string name="up_app_size">更新包体积: </string>
    <string name="up_app_content">更新内容:</string>


    <string name="agent_code_user">已使用</string>
    <string name="agent_code_unuser">未使用</string>
</resources>
